# fastapi-celery-example

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml
celery_app/: Dockerfile  __init__.py  requirements.txt  tasks.py
tests/: __init__.py  task_test.py
