[tool.poetry]
name = "fastapi-celery-example"
version = "0.1.0"
description = ""
authors = ["lidong293 <lidong310@jd.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
celery = "^5.0.5"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
